# RPN

./: Makefile.am  Makefile.in  README  RPN.files  config.h.in  configure  configure.ac
include/: conf.h  endianness.h  flavour_matrix.h  geometry.h  gparam.h  macro.h  vec.h
lib/: conf_def.c  conf_meas.c  conf_upd.c  endianness.c  flavour_matrix.c  geometry.c  gparam.c  vec.c
src/: on_z2bc.c  rpn.c  rpn_z2.c
tools/: analysis.py
